--- a/src/School/ConfigBundle/Resources/views/Ecole/edit.html.twig
+++ b/src/School/ConfigBundle/Resources/views/Ecole/edit.html.twig
@@ -1,14 +1,14 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Ecole edit</h1>
+    <h1>Modification des données de l'établissement</h1>
 
     {{ form(edit_form) }}
 
         <ul class="record_actions">
     <li>
         <a href="{{ path('config_ecole') }}">
-            Retourner à la liste
+            Retourner à la page
         </a>
     </li>
     <li>{{ form(delete_form) }}</li>
