--- a/src/School/ConfigBundle/Resources/views/Ecole/new.html.twig
+++ b/src/School/ConfigBundle/Resources/views/Ecole/new.html.twig
@@ -1,15 +1,17 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Ecole creation</h1>
+    <h1>Enregistrement des paramètres de l'établissement</h1>
 
     {{ form(form) }}
 
+    {#
         <ul class="record_actions">
-    <li>
-        <a href="{{ path('config_ecole') }}">
-            Retourner à la liste
-        </a>
-    </li>
-</ul>
+        <li>
+            <a href="{{ path('config_ecole') }}">
+                Retourner à la liste
+            </a>
+        </li>
+        </ul>
+    #}
 {% endblock %}
