--- a/src/School/StudentBundle/Resources/views/Classe/index.html.twig
+++ b/src/School/StudentBundle/Resources/views/Classe/index.html.twig
@@ -1,9 +1,8 @@
-{% extends '::base.html.twig' %}
+{% extends 'SchoolGestionBundle:Default:index.html.twig' %}
 
-{% block body -%}
-    <h1>Classe list</h1>
-
-    <table class="records_list table table-striped panel-primary" id="classe">
+{% block content -%}
+    <h2>Liste des salles de classes</h2>
+    <table class="records_list table cell-border row-border table-hover panel-primary" id="classe">
         <thead class="panel-heading">
             <tr>
                 <th>Id</th>
