Configuration de la première Connexion

--- a/src/School/GestionBundle/Resources/views/Default/index.html.twig
+++ b/src/School/GestionBundle/Resources/views/Default/index.html.twig
@@ -75,6 +75,9 @@
                             <li><a href="">Exporter les notes en PDF</a></li>
                             <li><a href="">Générer les statistiques</a></li>
                         </ol>
+                        <div class="pull-right">
+                            Matière: <i style="color: forestgreen">{{dispense.matiere}}</i>
+                        </div>
                     </div>
                 </div>
             {% endfor %}
