--- a/src/School/StudentBundle/Resources/views/Inscription/show.html.twig
+++ b/src/School/StudentBundle/Resources/views/Inscription/show.html.twig
@@ -40,7 +40,7 @@
 
     <ul class="record_actions">
         <li>
-            <a href="{{ path('inscription') }}">
+            <a href="{{ path('inscription_notyet') }}">
                 Back to the list
             </a>
         </li>
