--- a/src/School/GestionBundle/Resources/views/Default/index.html.twig
+++ b/src/School/GestionBundle/Resources/views/Default/index.html.twig
@@ -21,7 +21,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i> Elèves <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="{{ path('school_student_list')}}">Liste de élèves</a></li>
-                            <li><a href="{{ path('inscription_new')}}">Inscription</a></li>
+                            <li><a href="{{ path('inscription')}}">Inscriptions</a></li>
                         </ul>
                     </li>
 
@@ -54,7 +54,10 @@
         </nav>
         <div class="col-md-12 col-sm-12 col-xs-12">
             {% for flas_message in app.session.flashbag.get('notice') %}
-                <div class="alert alert-warning">{{ flas_message }}</div>
+                <div class="alert alert-warning text-center">{{ flas_message }}</div>
+            {% endfor %}
+            {% for flas_message in app.session.flashbag.get('error') %}
+                <div class="alert alert-danger text-center">{{ flas_message }}</div>
             {% endfor %}
         </div>
     {% endblock %}
@@ -84,7 +87,7 @@
                                             <div class="col-md-12 modal-body">
                                                 {% for sequence in listSequence %}
                                                     <center>
-                                                        <a href="{{path('note_add', {'id':dispense.classe.id , 'idSeq': sequence.id, 'idMat':dispense.matiere.id })}}" class="btn btn-green">
+                                                        <a href="{{path('note_add', {'id':dispense.classe.id , 'idSeq': sequence.id, 'idMat':dispense.matiere.id, 'idAnnee':dispense.annee.id })}}" class="btn btn-green">
                                                             <b>{{sequence}}</b>
                                                         </a> 
                                                     </center>
@@ -107,7 +110,7 @@
                                             <div class="col-md-12 modal-body">
                                                 {% for sequence in listSequence %}
                                                     <center>
-                                                        <a href="{{path('note_editnote', {'id':dispense.classe.id , 'idSeq': sequence.id, 'idMat':dispense.matiere.id })}}" class="btn btn-green">
+                                                        <a href="{{path('note_editnote', {'id':dispense.classe.id , 'idSeq': sequence.id, 'idMat':dispense.matiere.id, 'idAnnee':dispense.annee.id })}}" class="btn btn-green">
                                                             <b>{{sequence}}</b>
                                                         </a>
                                                     </center>
