--- a/src/School/StudentBundle/Resources/views/Inscription/new.html.twig
+++ b/src/School/StudentBundle/Resources/views/Inscription/new.html.twig
@@ -1,15 +1,76 @@
-{% extends '::base.html.twig' %}
+{% extends 'SchoolGestionBundle:Default:index.html.twig' %}
 
-{% block body -%}
-    <h1>Inscription creation</h1>
+{% block content -%}
+    <h1 class="text-center">Mise &agrave; jour d'une Inscription</h1>
 
-    {{ form(form) }}
+    {{ form_start(form)}}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('inscription') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
+    <div class="row">
+        <div class="col-md-offset-3 col-sm-offset-1 col-xs-offset-1 col-md-7 col-sm-11 col-xs-11">
+            <div class="form-group">
+                <label> Nom de l'&eacute;l&egrave;ve</label>
+                <div>
+                    <input value="{{ entity.student }}" class="form-control" disabled="disabled" type="text">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-3 col-sm-offset-1 col-xs-offset-1 col-md-7 col-sm-11 col-xs-11">
+            <div class="form-group">
+                <label> Date derni&egrave;re Avance</label>
+                <div>
+                    <input value="{{ entity.dateDerniereAvance|date('d-m-Y') }}" class="form-control" disabled="disabled" type="text">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-3 col-sm-offset-1 col-xs-offset-1 col-md-7 col-sm-11 col-xs-11">
+            <div class="form-group">
+                <label> Ann&eacute;e scolaire</label>
+                <div>
+                    <input value="{{ entity.annee}}" class="form-control" disabled="disabled" type="text">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-offset-3 col-sm-offset-1 col-xs-offset-1 col-md-7 col-sm-11 col-xs-11">
+            <div class="form-group">
+                {{ form_label(form.classe, 'Classe: ', {'label_attr': {'class': 'control-label'}}) }}
+                <div>
+                    {{ form_widget(form.classe, {'attr': {'class': 'form-control'}})  }}
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-3 col-sm-offset-1 col-xs-offset-1 col-md-7 col-sm-11 col-xs-11">
+            <div class="form-group">
+                {{ form_label(form.avance, 'Avance: ', {'label_attr': {'class': 'control-label'}}) }}
+                <div>
+                    {{ form_widget(form.avance, {'attr': {'class': 'form-control'}})  }}
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-offset-3 col-sm-offset-1 col-xs-offset-1 col-md-7 col-sm-11 col-xs-11">
+            <div class="form-group">
+                {{ form_label(form.status, 'Statut: ', {'label_attr': {'class': 'control-label'}}) }}
+                <div>
+                    {{ form_widget(form.status, {'attr': {'class': 'form-control'}})  }}
+                </div>
+            </div>
+        </div>
+
+    </div>
+    {{ form_end(form) }}<br><br>
+
+    <a href="{{ path('inscription_notyet') }}">
+        Back to the list
+    </a>
 {% endblock %}
+
