--- a/src/School/NoteBundle/Resources/views/Evaluation/index.html.twig
+++ b/src/School/NoteBundle/Resources/views/Evaluation/index.html.twig
@@ -1,6 +1,6 @@
-{% extends '::base.html.twig' %}
+{% extends 'SchoolGestionBundle:Default:index.html.twig' %}
 
-{% block body -%}
+{% block content -%}
     <h1>Evaluation list</h1>
 
     <table class="records_list table table-striped panel-primary" id="evaluation">
@@ -8,6 +8,7 @@
             <tr>
                 <th>Id</th>
                 <th>Nom de l'eleve</th>
+                <th>Classe</th>
                 <th>Note</th>
                 <th>Séquence</th>
                 <th>Matière</th>
@@ -21,6 +22,7 @@
                 <tr>
                     <td><a href="{{ path('evaluation_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                     <td>{{ entity.student.nom }}</td>
+                    <td>{{ entity.classe }}</td>
                     <td>{{ entity.note }}</td>
                     <td>{{ entity.sequence.nom }}</td>
                     <td>{{ entity.matiere.nom }}</td>
