--- a/src/School/StudentBundle/Resources/views/Inscription/index.html.twig
+++ b/src/School/StudentBundle/Resources/views/Inscription/index.html.twig
@@ -1,9 +1,12 @@
 {% extends 'SchoolGestionBundle:Default:index.html.twig' %}
 
 {% block content -%}
-    <h1>Inscription list</h1>
-
-    <table class="records_list table panel-primary">
+    <h1 class="text-center">Liste des Inscription</h1>
+    <nav class="nav navbar-inverse alert-success col-md-12" style="margin-bottom: 3px;">
+        <a style="color: green; font-size: 18px;
+           text-shadow: -1px 0px;" href="{{path('inscription_notyet')}}" class="pull-left btn-link"><span class="glyphicon glyphicon-plus-sign"></span> Inscrire un nouvel el&egrave;ve</a>
+    </nav>
+    <table id="inscription" class="records_list table panel-primary">
         <thead class="panel-heading">
             <tr>
                 <th>Id</th>
@@ -12,6 +15,7 @@
                 <th>Avance</th>
                 <th>Datederniereavance</th>
                 <th>Status</th>
+                <th>Année Académique</th>
                 <th>Détails</th>
                 <th>Modifier</th>
             </tr>
@@ -23,7 +27,7 @@
                     <td>{{ entity.student }}</td>
                     <td>{{ entity.classe }}</td>
                     <td>{{ entity.avance }}</td>
-                    <td>{% if entity.dateDerniereAvance %}{{ entity.dateDerniereAvance|date('Y-m-d H:i:s') }}{% endif %}</td>
+                    <td>{% if entity.dateDerniereAvance %}{{ entity.dateDerniereAvance|date('d-m-Y') }}{% endif %}</td>
                     <td>
                         Paiement 
                         {% if entity.status == 1 %}
@@ -33,22 +37,30 @@
                         {% endif %}
 
                     </td>
+                    <td>{{ entity.annee }}</td>
                     <td>
                         <a href="{{ path('inscription_show', { 'id': entity.id }) }}">voir</a>
                     </td>
                     <td>
-                        <a href="{{ path('inscription_edit', { 'id': entity.id }) }}">Modifier</a>
+                        {% if entity.status == 0 %}
+                            <a href="{{ path('inscription_edit', { 'id': entity.id }) }}">Modifier</a>
+                        {% else %}
+                            <b style="color: green">Termin&eacute;e</b>
+                        {% endif %}
                     </td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
 
-    <ul>
-        <li>
-            <a href="{{ path('inscription_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
+    <script>
+        $('#inscription').DataTable({
+            "pagingType": "full_numbers",
+            "lengthMenu": [[10, 20], [10, 20]],
+            "language": {
+                "url": "{{ asset('DataTables/French.json') }}"
+            }
+
+        });
+    </script>
 {% endblock %}
