--- a/src/School/NoteBundle/Resources/views/Bulletin/bulletinSeq.html.twig
+++ b/src/School/NoteBundle/Resources/views/Bulletin/bulletinSeq.html.twig
@@ -4,11 +4,11 @@
 {% block aside %}
 {% endblock %}
 {% block body %}
-    <div class="col-md-offset-2 col-md-8" style="margin-bottom: 8%; font-size: 12px;">
-        <table class="table " id="">
+    <div class="col-md-offset-2 col-md-8" style="margin-top: 0%; font-size: 12px; font-family: monospace">
+        <table class="table table-bordered" id="">
             <thead class="">
                 <tr>
-                    <td colspan="3" style="text-align: left">
+                    <td colspan="3" style="text-align: center">
                         <b>
                             {{ pays.ministereFrancais }}<br>
                             {{ ecole.nomFrancais }}<br>
@@ -16,30 +16,30 @@
                         </b>
                     </td>
                     <td colspan="2" style="text-align: center">
-                        logo
+                        <img style="height: 70px; width: 90px;" src="{{ asset('uploads/logos/' ~ ecole.logo.id ~'.'~ ecole.logo.url)}}" alt="Logo" title="" >
                     </td>
-                    <td colspan="3" style="text-align: right">
+                    <td colspan="3" style="text-align: center">
                         <b>
-                            {{ pays.paysFrancais }}<br>
+                            Republique du {{ pays.paysFrancais }}<br>
                             {{ pays.deviseFrancais }}<br>
                             {{ecole.deviseFrancais}}
                         </b>
                     </td>
                 </tr>
                 <tr>
-                    <td style="text-align: left"><b>{{annee}}</b></td>
-                    <td colspan="5" style="font-size: 1em; text-align: center"><b>BULLETIN DE NOTES</b></td>
-                    <td colspan="3" style="text-align: right"><b>{{ listCategories[0].listeMatieres[0].evaluationSeq[0].sequence }}</b></td>
+                    <td style="text-align: left" colspan="2"><b>{{annee}}</b></td>
+                    <td colspan="4" style="font-size: 1em; text-align: center"><b>BULLETIN DE NOTES</b></td>
+                    <td colspan="2" style="text-align: right"><b>{{ listCategories[0].listeMatieres[0].evaluationSeq[0].sequence }}</b></td>
                 </tr>
                 <tr>
-                    <td rowspan="2" style="text-align: left"><img style="height: 50px; width: 50px;" src="{{ asset('uploads/images/' ~ student.photo.id ~'.'~ student.photo.url)}}" alt="{{student}}" title="{{student}}"></td>
+                    <td rowspan="2" style="text-align: left"><img style="height: 70px; width: 85px;" src="{{ asset('uploads/images/' ~ student.photo.id ~'.'~ student.photo.url)}}" alt="{{student}}" title="{{student}}"></td>
                     <td colspan="3" style="text-align: left">Elève: <b>{{ student.nom | upper}}</b></td>
                     <td colspan="2" style="text-align: left"><b>{{ student.dateNaissance|date('d-m-Y') }}</b> A <b>{{ student.lieuNaissance | upper}}</b></td>
                     <td>Matricule:  <b>{{ student.matricule }}</b></td>
                     <td colspan="1" style="text-align: left">Sexe: <b>{{student.sexe}}</b></td>
                 </tr>
                 <tr>
-                    <td style="text-align: left" colspan="4">Prof. Titulaire: <b>{{titulaire}}</b></td>
+                    <td style="text-align: left" colspan="4">Titulaire: <b>{{titulaire}}</b></td>
                     <td colspan="2" style="text-align: left">Classe:  <b>{{ student.classe.abreviation }}</b></td>
                     <td colspan="2" style="text-align: left">Eff.: <b>{{Allstudent | length}}</b></td>
                 </tr>
@@ -113,6 +113,27 @@
                         </td>
                     </tr>
                 {% endfor %}
+                <tr>
+                    <td colspan="8">&nbsp;</td>
+                </tr>
+                <tr style="border: 2px solid black;">
+                    <td colspan="4" style="text-align: right;">
+                        <b><i>MOYENNE SEQUENTIELLE</i></b>
+                    </td>
+                    <td>
+                        Coef: 
+                    </td>
+                    <td>
+                        Total:
+                    </td>
+
+                    <td>
+                        <b>Moy/20</b>
+                    </td>
+                    <td>
+                        <b>Rang: </b>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
